webflow/css/classes.css
/* ... */
.chat__menu__name {
  margin-left: 0.25em;
  font-size: 0.9em;
  line-height: 1.1em;
}

.chat__menu__name.chat__menu__name--ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.chat__menu__pane {
  left: 0%;
  top: auto;
  right: 0%;
  bottom: 100%;
  overflow: auto;
  height: 13.4em;
  margin-bottom: 1px;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  border-top: 1px solid var(--panels-border);
  background-color: var(--canvas-bg);
}

.chat__menu__link {
  display: block;
  padding: 0.5em 0.75em;
}

.chat__menu__link:hover {
  background-color: var(--panels-hover);
}

.chat__menu__text {
  line-height: 1.1em;
}

.chat__menu__label {
  padding-top: 0.7em;
  padding-bottom: 0.7em;
  padding-left: 0.95em;
  font-size: 0.8em;
  font-weight: 700;
}

.chat__message {
  margin-bottom: 2em;
  padding: 0.7em 0.75em;
  border: 1px solid var(--panels-hover);
  border-radius: var(--radius-md);
  background-color: var(--canvas-bg);
  color: var(--text-message);
  line-height: 1.4em;
}

.chat__response {
  margin-bottom: 2em;
  font-family: var(--agents);
  font-size: 0.9em;
  line-height: 1.4em;
  font-weight: 300;
}

.flex-expand {
  height: auto;
  flex: 1;
}

.footer__trigger {
  display: flex;
  width: 2em;
  margin: 0px;
  padding: 0px;
  justify-content: center;
  align-items: center;
  aspect-ratio: 1/1;
  border-radius: var(--radius-sm);
  color: var(--text-light);
}

.footer__trigger:hover {
  background-color: var(--panels-hover);
}

.footer__trigger:active {
  color: var(--text-active);
}

.footer__trigger.w--open {
  color: var(--text-active);
}

.test {
  display: none;
  width: 20em;
  border-left: 1px solid var(--panels-border);
}

.chat__window {
  position: relative;
  display: flex;
  height: 100%;
  flex-direction: column;
  flex-wrap: nowrap;
}

.panel__handle {
  position: absolute;
  left: auto;
  top: 0%;
  right: 0%;
  bottom: 0%;
  z-index: 1;
  width: 0.2em;
  cursor: col-resize;
  touch-action: none;
}

.panel__handle:hover {
  background-color: var(--text-light);
}

.panel__handle.panel__handle--left {
  left: 0%;
  top: 0%;
  right: auto;
  bottom: 0%;
}

.nav__links {
  overflow: auto;
  height: 100%;
}

.version {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.version__link:hover {
  color: var(--text-active);
}

.version__dot {
  margin-right: 0.5em;
  margin-left: 0.5em;
}

.menu {
  display: block;
}

.menu__toggle {
  display: flex;
  height: 100%;
  margin: 0px;
  padding: 0em;
  justify-content: center;
  align-items: center;
}

.menu__toggle.w--open {
  color: var(--text-active);
}

.avatar {
  display: block;
  overflow: hidden;
  width: 1.8em;
  margin-right: 0.5em;
  margin-left: 0.5em;
  aspect-ratio: 1/1;
  border-radius: 50%;
  background-image: url(https://cdn.prod.website-files.com/6a259953fee40810f9cfa688/6a552ad7bca79f1fb7c8f249_avatar-2026.jpg);
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
}

.avatar:hover {
  background-image: url(https://cdn.prod.website-files.com/6a259953fee40810f9cfa688/6a5541f827c4975734612f50_avatars.gif);
}

.menu__pane {
  left: auto;
  top: 100%;
  right: 0.5em;
  bottom: auto;
  border: 1px solid var(--panels-border);
  border-radius: var(--radius-sm);
  background-color: var(--panels-bg);
}

.menu__pane.menu__pane--flyout {
  top: 0%;
  right: 100%;
  width: 15em;
  min-width: 15em;
}

.menu__pane.menu__pane--up {
  top: auto;
  bottom: 100%;
}

.menu__section {
  width: 100%;
  padding: 0.5em;
  border-bottom: 1px solid var(--panels-border);
}

.menu__link {
  display: flex;
  width: 100%;
  height: 2.2em;
  padding-right: 0.5em;
  padding-left: 0.5em;
  justify-content: space-between;
  align-items: center;
  border-radius: var(--radius-sm);
}

.menu__link:hover {
  background-color: var(--panels-hover);
}

.menu__link.menu__link--mobile {
  display: none;
}

.menu__link.menu__link--idgaf {
  cursor: not-allowed;
}

.menu__text {
  font-size: 1.1em;
  line-height: 1em;
}

.menu__label {
  padding-right: 0.5em;
  padding-left: 0.5em;
  opacity: 0.75;
  font-size: 0.9em;
  line-height: 1.8em;
}

.menu__pill {
  padding-right: 0.3em;
  padding-left: 0.3em;
  border: 1px solid var(--panels-hover);
  border-radius: var(--radius-sm);
  background-color: var(--canvas-bg);
  font-size: 0.9em;
  line-height: 1.5em;
}

.menu__chevron {
  width: 1em;
  height: 1em;
  font-size: 1.2em;
}

.menu__icon {
  width: 1em;
  height: 1em;
}

.panel__handle__expander {
  position: absolute;
  left: -0.8em;
  top: 0%;
  right: -0.8em;
  bottom: 0%;
}

.stat {
  display: flex;
  height: 1.75em;
  padding-right: 0.5em;
  padding-left: 0.5em;
  justify-content: flex-start;
  align-items: center;
}

.stat__text {
  line-height: 1em;
}

.stat__text.stat__text--language {
  width: 2.8em;
}

.stat__text.stat__text--pct1 {
  width: 3em;
  text-align: right;
}

.stat__bar {
  overflow: hidden;
  width: 10em;
  height: 0.5em;
  margin-right: 0.5em;
  margin-left: 0.5em;
  border-radius: 0.25em;
  background-color: var(--panels-hover);
}

.stat__fill {
  width: 30%;
  height: 100%;
  border-top-right-radius: 0.25em;
  border-bottom-right-radius: 0.25em;
  background-color: var(--text-light);
}

.menu__profile {
  width: 18em;
}

.menu__slot {
  display: block;
  width: 100%;
}

.statsslot {
  height: auto;
}
/* ... */

